add validate phoneNumber microService

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_URI=mongodb+srv://moussaharkous:test123@areebaapp.xqnzu4h.mongodb.net/?retryWrites=true&w=majority
+PHONENUMBER_API_KEY=98a45cba02019a8ed76e474bcb8d3655
